# CnC-Tools

./: .gitignore  README.md  meson.build
CPU Tests/: meson.build
CPU Tests/BruceHoultPrimes/: HoultPrimes.c  meson.build
CPU Tests/CoreCoherencyLatency/: main.c  meson.build
Framework/: meson.build  platformCode.c  platformCode.h  storage.c  storage.h  storage_lexer.l  storage_parser.h  storage_parser.y  timing.c  timing.h  unitTests.C
Framework/tests/: meson.build  test_affinity.c  test_storage.c  test_timing.c  unitTests.c  unitTests.h
subprojects/: dpdk.wrap
